Fix invisible text launcher

--- a/apps/Launcher/style.css
+++ b/apps/Launcher/style.css
@@ -1,5 +1,9 @@
 :root {
-    color-scheme: light dark;
+    color-scheme: dark;
+}
+
+*{
+    color: white;
 }
 
 #text {
